# Watercolor

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  README.md  main.cpp
Libraries/glad/: CMakeLists.txt
Libraries/glad/include/glad/: glad.h
Libraries/glad/src/: glad.c
OpenGLWrappers/: Framebuffer.cpp  Framebuffer.h  FullscreenQuad.cpp  FullscreenQuad.h  Mesh.cpp  Mesh.h  Texture2D.cpp  Texture2D.h
Shaders/: Default.frag  Default.vert  EdgeDarkening.frag  Gradient.frag  LUVtoRGB.frag  MeanShift.frag  PigmentVariation.frag  RGBtoLUV.frag  Toon.frag  Toon.vert  TurbulentFlow.frag  TurbulentFlow.vert  Wobble.frag
Utils/: Debug.h  ShaderLoader.h
